tests/fixtures/valid/import.py
import os  # Check 1

import os  # Check 2

"""
Lorem ipsum dolor sit amet
"""
import os  # Check 3

# Lorem ipsum dolor sit amet
import os  # Check 4

if 1 == 1:  # Check 5
    import os

    import os
elif 2 == 2:
    import os

    import os
else:
    import os

    import os

for i in [1, 2]:  # Check 6
    import os

    import os
else:
    import os

    import os

while True:  # Check 7
    import os

    import os
else:
    import os

    import os

try: # Check 8
    import os

    import os
except Exception:
    import os

    import os
finally:
    import os

    import os
